2003-12-11  Chris Dunlap  <cdunlap@llnl.gov>

	* src/libcommon/munge_msg.c(_munge_msg_send):
	  Changed to use gather-writes.

	* src/libcommon/munge_defs.h:
	  Increased MUNGE_SOCKET_BACKLOG from 128 to 256.

2003-11-26  Chris Dunlap  <cdunlap@llnl.gov>

	* : Re-bootstrap'd with autoconf-2.57, automake-1.7.9, libtool-1.5.0a.

	* src/libcommon/munge_defs.h, src/munged/Makefile.am,
	  src/munged/conf.c, src/munged/cred.h, src/munged/dec_v1.c,
	  src/munged/hash.c, src/munged/hash.h, src/munged/munged.c,
	  src/munged/replay.c, src/munged/replay.h, src/munged/thread.c,
	  src/munged/thread.h, src/munged/timer.c, src/munged/timer.h:
	  Added support for replay detection/prevention.

2003-10-28  Chris Dunlap  <cdunlap@llnl.gov>

	* : Re-bootstrap'd with autoconf-2.57, automake-1.7.8, libtool-1.5.0a.

	* src/etc/Makefile.am: Added support for /etc/init.d/ (Debian).

2003-10-24  Chris Dunlap  <cdunlap@llnl.gov>

	* : Released 0.2.

2003-10-14  Chris Dunlap  <cdunlap@llnl.gov>

	* src/libcommon/munge_defs.h, src/munged/random.c:
	  Changed RANDOM_SEED_DEFAULT from "/dev/random" to "/dev/urandom".

	* src/munged/dec_v1.c(dec_v1_unpack_inner):
	  Fixed unaligned access on ia64 {gnats:303}.

	* src/munged/dec_v1.c, src/munged/enc_v1.c:
	  Fixed ia64 compiler warning that time_t "comparison is always false
	  due to limited range of data type".

2003-09-18  Chris Dunlap  <cdunlap@llnl.gov>

	* doc/credential_v1_format.txt, src/libcommon/munge_defs.h,
	  src/libmunge/ctx.c, src/libmunge/decode.c, src/libmunge/encode.c,
	  src/libmunge/munge.h, src/munge/munge.c, src/munge/unmunge.c,
	  src/munged/conf.c, src/munged/conf.h, src/munged/dec_v1.c,
	  src/munged/enc_v1.c: Added TTL back into credential (for replay).

	* src/libcommon/fd.c: Tweaked formatting.

2003-07-18  Chris Dunlap  <cdunlap@llnl.gov>

	* src/libcommon/munge_msg.c: Augmented err msgs once again.

2003-07-02  Chris Dunlap  <cdunlap@llnl.gov>

	* src/libcommon/munge_defs.h: